Fixed import and css overflow error with panes.

--- a/scss/components/_panes.scss
+++ b/scss/components/_panes.scss
@@ -33,6 +33,7 @@
 .pane {
   box-sizing: border-box !important;
   position: relative;
+  overflow: hidden;
 
   &.handle-right {
     .pane__handle {
